refactor: Make Event and Snapshot rely on Storable instead of Object